# max_bot

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
src/: main.py  maxbot.py  session.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 2026_01_22_0232-4e9c1e2d7248_init_data.py  2026_01_29_0814-c72a1d57e222_add_last_activity.py
src/emums/: persons.py  prompts.py
src/models/: __init__.py  base.py  students.py  teachers.py  users.py
src/repositories/: base.py  user.py
